--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
+    "morgan": "^1.10.0",
     "redis": "^3.0.2"
   }
 }
